--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,37 @@ footer {
     color: #666;
 }
 
+/* Footnote box */
+
+sup.footnote-number {
+  position: relative;
+  /* cursor: help; */
+}
+
+/* the hidden tooltip */
+sup.footnote-number .fn-tooltip {
+  display: none;
+  position: absolute;
+  top: 1.4em;       /* slide it just below the superscript */
+  left: 0;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  max-width: 280px;
+  min-width: 200px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+  font-size: 0.9em;
+  line-height: 1.4;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  sup.footnote-number:hover .fn-tooltip {
+    display: block;
+  }
+}
+
+
 /* Projects */
 
 .project-item {
